using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationController : MonoBehaviour
{
    public Animator anim;
    public float inputH;
    public float inputV;
    public Vector3 forward;
    public float headingAngle;
    public int basicNum;
    public float timeToReset;
    public float timeElapsed;
    public float timeElapsedBetween;
    public float timeBetween;
    public float attaking;
    public bool isWalking;

    // Use this for initialization
    void Start()
    {

    }

    // Update is called once per frame
    void Update()
    {

    }
}
